--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@ryangjchandler/alpine-clipboard": "^2.3.0",
         "alpinejs": "^3.13.3"
     }
 }
