--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,4 +32,5 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: |
+        php artisan test
